--- a/Restyle.uplugin
+++ b/Restyle.uplugin
@@ -1,7 +1,7 @@
 {
 	"FileVersion": 3,
 	"Version": 1,
-	"VersionName": "0.0.1",
+	"VersionName": "1.0",
 	"FriendlyName": "Restyle",
 	"Description": "",
 	"Category": "Other",
@@ -12,7 +12,7 @@
 	"SupportURL": "https://github.com/AgitoReiKen/ue-restyle",
 	"CanContainContent": true,
 	"IsBetaVersion": false,
-	"IsExperimentalVersion": true,
+	"IsExperimentalVersion": false,
 	"Installed": false,
 	"EngineVersion": [ "5.1" ],
 	"Modules": [
