--- a/Restyle.uplugin
+++ b/Restyle.uplugin
@@ -30,7 +30,9 @@
 			"Type": "Editor",
 			"LoadingPhase": "PostEngineInit",
 			"WhitelistPlatforms": [
-				"Win64"
+				"Win64",
+				"Mac",
+				"Linux"
 			],
 			"AdditionalDependencies": [
 				"RestyleShaders"
