--- a/Restyle.uplugin
+++ b/Restyle.uplugin
@@ -32,7 +32,9 @@
 			"Type": "DeveloperTool",
 			"LoadingPhase": "PostConfigInit",
 			"WhitelistPlatforms": [
-				"Win64"
+				"Win64",
+				"Mac",
+				"Linux"
 			]
 		}
 	]
